--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -56,10 +56,10 @@ jobs:
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
       - name: azd provision
-        run: azd provision --environment ${{ job.environment }}
+        run: azd provision --environment $AZURE_ENV_NAME
 
       - name: azd deploy
-        run: azd deploy --environment ${{ job.environment }}
+        run: azd deploy --environment $AZURE_ENV_NAME
 
       - name: Get PostgreSQL password from Key Vault
         uses: azure/cli@v2
@@ -111,10 +111,10 @@ jobs:
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
       - name: azd provision
-        run: azd provision --environment ${{ job.environment }}
+        run: azd provision --environment $AZURE_ENV_NAME
 
       - name: azd deploy
-        run: azd deploy --environment ${{ job.environment }}
+        run: azd deploy --environment $AZURE_ENV_NAME
 
       - name: Get PostgreSQL password from Key Vault
         uses: azure/cli@v2
@@ -166,10 +166,10 @@ jobs:
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
       - name: azd provision
-        run: azd provision --environment ${{ job.environment }}
+        run: azd provision --environment $AZURE_ENV_NAME
 
       - name: azd deploy
-        run: azd deploy --environment ${{ job.environment }}
+        run: azd deploy --environment $AZURE_ENV_NAME
 
       - name: Get PostgreSQL password from Key Vault
         uses: azure/cli@v2
@@ -221,10 +221,10 @@ jobs:
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
       - name: azd provision
-        run: azd provision --environment ${{ job.environment }}
+        run: azd provision --environment $AZURE_ENV_NAME
 
       - name: azd deploy
-        run: azd deploy --environment ${{ job.environment }}
+        run: azd deploy --environment $AZURE_ENV_NAME
 
       - name: Get PostgreSQL password from Key Vault
         uses: azure/cli@v2
@@ -276,10 +276,10 @@ jobs:
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
       - name: azd provision
-        run: azd provision --environment ${{ job.environment }}
+        run: azd provision --environment $AZURE_ENV_NAME
 
       - name: azd deploy
-        run: azd deploy --environment ${{ job.environment }}
+        run: azd deploy --environment $AZURE_ENV_NAME
 
       - name: Get PostgreSQL password from Key Vault
         uses: azure/cli@v2
