--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -55,6 +55,13 @@ jobs:
         run: >
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
+      - name: Ensure azd environment exists
+        run: |
+          if ! azd env list | grep -q "$AZURE_ENV_NAME"; then
+            echo "ERROR: azd environment '$AZURE_ENV_NAME' does not exist. Please create it before running this workflow."
+            exit 1
+          fi
+
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
 
@@ -109,6 +116,13 @@ jobs:
       - name: azd auth login (OIDC)
         run: >
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
+
+      - name: Ensure azd environment exists
+        run: |
+          if ! azd env list | grep -q "$AZURE_ENV_NAME"; then
+            echo "ERROR: azd environment '$AZURE_ENV_NAME' does not exist. Please create it before running this workflow."
+            exit 1
+          fi
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
@@ -165,6 +179,13 @@ jobs:
         run: >
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
+      - name: Ensure azd environment exists
+        run: |
+          if ! azd env list | grep -q "$AZURE_ENV_NAME"; then
+            echo "ERROR: azd environment '$AZURE_ENV_NAME' does not exist. Please create it before running this workflow."
+            exit 1
+          fi
+
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
 
@@ -220,6 +241,13 @@ jobs:
         run: >
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
+      - name: Ensure azd environment exists
+        run: |
+          if ! azd env list | grep -q "$AZURE_ENV_NAME"; then
+            echo "ERROR: azd environment '$AZURE_ENV_NAME' does not exist. Please create it before running this workflow."
+            exit 1
+          fi
+
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
 
@@ -274,6 +302,13 @@ jobs:
       - name: azd auth login (OIDC)
         run: >
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
+
+      - name: Ensure azd environment exists
+        run: |
+          if ! azd env list | grep -q "$AZURE_ENV_NAME"; then
+            echo "ERROR: azd environment '$AZURE_ENV_NAME' does not exist. Please create it before running this workflow."
+            exit 1
+          fi
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
