--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -66,8 +66,9 @@ jobs:
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
 
-      - name: Debug: Show last 20 lines of main.bicep
-        run: tail -n 20 infra/main.bicep
+      - name: Debug Show last 20 lines of main.bicep
+        run: |
+          tail -n 20 infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
