--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -136,7 +136,7 @@ jobs:
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
 
-      - name: Debug: Show last 20 lines of main.bicep
+      - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
 
       - name: azd provision
@@ -205,7 +205,7 @@ jobs:
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
 
-      - name: Debug: Show last 20 lines of main.bicep
+      - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
 
       - name: azd provision
@@ -274,7 +274,7 @@ jobs:
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
 
-      - name: Debug: Show last 20 lines of main.bicep
+      - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
 
       - name: azd provision
@@ -343,7 +343,7 @@ jobs:
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
 
-      - name: Debug: Show last 20 lines of main.bicep
+      - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
 
       - name: azd provision
