--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -65,16 +65,11 @@ jobs:
           azd env set POSTGRES_HOST ${{ secrets.POSTGRES_HOST }}
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
+          azd env set AZURE_RESOURCE_GROUP ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Debug Show last 20 lines of main.bicep
         run: |
           tail -n 20 infra/main.bicep
-
-      - name: Show Bicep version
-        run: az bicep version
-
-      - name: Try bicep build directly
-        run: az bicep build --file infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
@@ -141,15 +136,10 @@ jobs:
           azd env set POSTGRES_HOST ${{ secrets.POSTGRES_HOST }}
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
+          azd env set AZURE_RESOURCE_GROUP ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
-
-      - name: Show Bicep version
-        run: az bicep version
-
-      - name: Try bicep build directly
-        run: az bicep build --file infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
@@ -216,15 +206,10 @@ jobs:
           azd env set POSTGRES_HOST ${{ secrets.POSTGRES_HOST }}
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
+          azd env set AZURE_RESOURCE_GROUP ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
-
-      - name: Show Bicep version
-        run: az bicep version
-
-      - name: Try bicep build directly
-        run: az bicep build --file infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
@@ -291,15 +276,10 @@ jobs:
           azd env set POSTGRES_HOST ${{ secrets.POSTGRES_HOST }}
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
+          azd env set AZURE_RESOURCE_GROUP ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
-
-      - name: Show Bicep version
-        run: az bicep version
-
-      - name: Try bicep build directly
-        run: az bicep build --file infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
@@ -366,15 +346,10 @@ jobs:
           azd env set POSTGRES_HOST ${{ secrets.POSTGRES_HOST }}
           azd env set POSTGRES_DB ${{ secrets.POSTGRES_DB }}
           azd env set POSTGRES_USER ${{ secrets.POSTGRES_USER }}
+          azd env set AZURE_RESOURCE_GROUP ${{ vars.AZURE_RESOURCE_GROUP }}
 
       - name: Debug Show last 20 lines of main.bicep
         run: tail -n 20 infra/main.bicep
-
-      - name: Show Bicep version
-        run: az bicep version
-
-      - name: Try bicep build directly
-        run: az bicep build --file infra/main.bicep
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
